@@ -9,9 +9,9 @@ dependencies[] = path_breadcrumbs
 dependencies[] = i18n_string
 dependencies[] = i18n
 
-; Information added by drupal.org packaging script on 2013-10-24
-version = "7.x-3.0-beta6"
+; Information added by Drupal.org packaging script on 2014-01-08
+version = "7.x-3.0-beta7"
 core = "7.x"
 project = "path_breadcrumbs"
-datestamp = "1382650227"
+datestamp = "1389201682"
 
