@@ -267,11 +267,11 @@ function path_breadcrumbs_ui_add_form_validate($form, $form_state) {
 
   $machine_name = '';
 
-  if (isset($form_state['storage']['machine_name'])) {
-    $machine_name = $form_state['storage']['machine_name'];
-  }
-  elseif (isset($values['machine_name'])) {
+  if (isset($values['machine_name'])) {
     $machine_name = $values['machine_name'];
+  }
+  elseif (isset($form_state['storage']['machine_name'])) {
+    $machine_name = $form_state['storage']['machine_name'];
   }
 
   // Don't allow to use existing machine name for new breadcrumbs.
