@@ -1,6 +1,14 @@
 Path Breadcrumbs 7.x-3.x, xxxx-xx-xx
 ------------------------------
 
+Path Breadcrumbs 7.x-3.0-beta7, 2014-01-08
+#2122051 by kalabro | zniki.ru: Fixed Machine name validation error when clone PB item.
+#2118329 by kalabro | klim_: Improved URL query support (?&=).
+#2066223 by sylus, OnkelTem: Add partial jquery_update-dev support.
+#2153755 by bkosborne: Fixed Variable "path_breadcrumbs_decode_entities" not deleted on uninstall.
+#2149763 by kalabro, manuelBS | Spleshka: Added 'pb-join' token for node menus, current page menu item and Book hierarchy.
+#2160011 by kalabro | VasilyKraev: Added "Configuration Management" module support.
+
 
 Path Breadcrumbs 7.x-3.0-beta6, 2013-10-25
 ------------------------------
@@ -27,7 +35,7 @@ Path Breadcrumbs 7.x-3.0-beta4, 2013-08-06
 #2033169 by kalabro: Added new option "URL path cleaning method" with CTools and Pathauto support.
 #1929110 by samhassell, VasilyKraev, kalabro: Added new option "Maximum title length" for truncating long strings.
 #1959890 by rimen, grient, kalabro: Link/title fields maxlength increased to 256.
-By kalabro: Added new "bp-join" token for hierarchical taxonomy breadcrumbs.
+By kalabro: Added new "pb-join" token for hierarchical taxonomy breadcrumbs.
 #2035365 by lecler, kalabro: Fixed Translations lost after reverting path breadcrumbs.
 #2018979 by mmikitka, kalabro: Sort breadcrumbs export by natural order for better file diffing.
 
